--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <ul>
             <li>
-                <a>将曲线拟合到二维数据</a>
+                <a href="./demos/train/2d-data">将曲线拟合到二维数据</a>
             </li>
             <li>
                 <a>利用 CNN 识别手写数字</a>
